--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,8 +2,11 @@
 /public/hot
 /public/storage
 /storage/*.key
-
-
+/vendor
+/node_modules
+package.json
+package-lock.json
+.env
 .env.backup
 .phpunit.result.cache
 Homestead.json
