--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "2.6.10"
     },
     "dependencies": {
+        "@websanova/vue-auth": "^2.21.14-beta",
+        "es6-promise": "^4.2.8",
         "vue-axios": "^2.1.4",
         "vue-router": "^3.1.2"
     }
